<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/login_background"
    android:gravity="center"
    android:padding="30dp"
    android:orientation="vertical"
    tools:context=".MainActivity">


    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/app_heading"
        android:textSize="38sp"
        android:visibility="visible" />


    <EditText
        android:id="@+id/etPhone"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/Enter_No"
        android:textSize="22sp"
        android:inputType="phone"
        />

    <EditText
        android:id="@+id/etPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/Enter_Pass"
        android:textSize="22sp"
        android:inputType="textPassword" />

    <Button
        android:id="@+id/btnLogin"
        android:layout_width="120dp"
        android:layout_height="wrap_content"
        android:background="#fff"
        android:textColor="#1495d7"
        android:text="@string/Sign_in" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/No_acc_prmt" />

        <Button
            android:id="@+id/Register"
            android:layout_width="60dp"
            android:layout_height="wrap_content"
            android:background="@android:color/transparent"
            android:text="@string/Reg"
            android:textAllCaps="false" />
    </LinearLayout>
    <Button
        android:id="@+id/FrgtPass"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:background="@android:color/transparent"
        android:text="@string/Frgt_pass_prmt"
        android:textAllCaps="false" />
</LinearLayout>



