<?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/login_background"
    android:gravity="center"
    android:padding="30dp"
    android:orientation="vertical"
    tools:context=".Register_activity">


    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        android:gravity="center"
        android:text="@string/register_new_user"
        android:textSize="38sp"
        android:visibility="visible" />


    <EditText
        android:id="@+id/etaccess"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/enter_access_code"
        android:textSize="22sp"
        android:inputType="text"
        />

    <Button
        android:id="@+id/etregister_next"
        android:layout_width="120dp"
        android:layout_height="wrap_content"
        android:background="#fff"
        android:textColor="#1495d7"
        android:text="@string/next" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/don_t_have_a_access_code" />

        <Button
            android:id="@+id/etaccess_call"
            android:layout_width="60dp"
            android:layout_height="wrap_content"
            android:background="@android:color/transparent"
            android:text="@string/call_us"
            android:textAllCaps="false" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:gravity="center">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/already_registered" />

        <Button
            android:id="@+id/Registed_user"
            android:layout_width="60dp"
            android:layout_height="wrap_content"
            android:background="@android:color/transparent"
            android:text="@string/login"
            android:textAllCaps="false" />
    </LinearLayout>


</LinearLayout>