<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/login_background"
    android:gravity="center"
    android:padding="30dp"
    android:orientation="vertical"
    tools:context=".register_activity_page2">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/register_new_user"
        android:textSize="38sp"
        android:visibility="visible" />


    <EditText
        android:id="@+id/etnewpass"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/enter_new_password"
        android:textSize="22sp"
        android:inputType="textPassword"
        />

    <EditText
        android:id="@+id/etnewpass_confrm"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/confirm_password"
        android:textSize="22sp"
        android:inputType="textPassword"
        />

    <CheckBox
        android:id="@+id/checkBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/i_accept_the_service_agreement" />

    <Button
        android:id="@+id/etregister_next"
        android:layout_width="120dp"
        android:layout_height="wrap_content"
        android:background="#fff"
        android:textColor="#1495d7"
        android:text="@string/finish" />

</LinearLayout>

