<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.Toolbar xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:elevation="10dp"
    android:background="@android:color/transparent">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <RelativeLayout
            android:layout_marginTop="20dp"
            android:layout_marginRight="10dp"
            android:layout_marginLeft="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/healthapptitle"
                android:text="@string/my_health_board"
                android:textSize="25sp"
                android:layout_marginTop="30dp"
                android:layout_marginLeft="5dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">
            </TextView>
            <TextView
                android:layout_below="@id/healthapptitle"
                android:text="@string/username"
                android:textSize="20sp"
                android:layout_marginLeft="5dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">
            </TextView>

            <ImageView
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_alignParentRight="true"
                android:layout_marginRight="-2dp"
                android:contentDescription="@string/user_picture"
                android:src="@drawable/account_circle_24px">

            </ImageView>
        </RelativeLayout>

    </LinearLayout>

</androidx.appcompat.widget.Toolbar>