<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fadeScrollbars="true"
    android:requiresFadingEdge="vertical"
    android:fadingEdgeLength="250dp"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@drawable/dashboard_background"
    tools:context=".Main_DashBoard">

    <include
        layout="@layout/toolbar">

    </include>

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <RelativeLayout
            android:layout_marginTop="50dp"
            android:layout_marginRight="30dp"
            android:layout_marginLeft="30dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:text="@string/my_health_board"
                android:textSize="25sp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">


            </TextView>
                 <ImageView
                    android:layout_alignParentRight="true"
                    android:src="@drawable/account_circle_24px"
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                     android:contentDescription="TODO">

                 </ImageView>
    
    
        </RelativeLayout>
                    <GridLayout

                        android:columnCount="1"
                        android:rowCount="2"
                        android:alignmentMode="alignMargins"
                        android:columnOrderPreserved="false"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">

                        <androidx.cardview.widget.CardView
                            android:id="@+id/schedule_card"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_columnWeight="1"
                            android:layout_rowWeight="1"
                            app:cardElevation="10dp"
                            app:cardCornerRadius="12dp"
                            app:cardBackgroundColor="#ffff"
                            android:layout_margin="12dp"
                            >

                            <LinearLayout
                                android:layout_width="match_parent"
                                android:layout_height="160dp"
                                android:gravity="center"
                                android:padding="16dp"
                                android:orientation="vertical">

                                <ImageView
                                    android:layout_width="90dp"
                                    android:layout_height="90dp"
                                    android:contentDescription="@string/scheduling_btn"
                                    android:src="@drawable/calendar_today_24px" />

                                <TextView
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:layout_marginTop="12dp"
                                    android:textSize="20sp"
                                    android:textColor="#000"
                                    android:text="@string/schedule" />

                            </LinearLayout>

                        </androidx.cardview.widget.CardView>
                        <androidx.cardview.widget.CardView
                            android:id="@+id/reports_card"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_columnWeight="1"
                            android:layout_rowWeight="1"
                            app:cardElevation="10dp"
                            app:cardBackgroundColor="#ffff"
                            app:cardCornerRadius="12dp"
                            android:layout_margin="12dp">

                            <LinearLayout
                                android:padding="16dp"
                                android:gravity="center"
                                android:layout_width="match_parent"
                                android:layout_height="160dp"
                                android:orientation="vertical">

                                <ImageView
                                    android:src="@drawable/event_note_24px"
                                    android:layout_width="90dp"
                                    android:layout_height="90dp"/>
                                <TextView
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:layout_marginTop="12dp"
                                    android:textSize="20sp"
                                    android:textColor="#000"
                                    android:text="@string/reports" />

                            </LinearLayout>
                        </androidx.cardview.widget.CardView>
                        <androidx.cardview.widget.CardView
                            android:id="@+id/medication_card"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_columnWeight="1"
                            android:layout_rowWeight="1"
                            app:cardElevation="10dp"
                            app:cardBackgroundColor="#ffff"
                            app:cardCornerRadius="12dp"
                            android:layout_margin="12dp">

                            <LinearLayout
                                android:layout_width="match_parent"
                                android:layout_height="160dp"
                                android:gravity="center"
                                android:padding="16dp"
                                android:orientation="vertical">

                                <ImageView
                                    android:layout_width="90dp"
                                    android:layout_height="90dp"
                                    android:contentDescription="@string/scheduling_btn"
                                    android:src="@drawable/medical_services_24px" />

                                <TextView
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:layout_marginTop="12dp"
                                    android:textColor="#000"
                                    android:text="@string/medication"
                                    android:textSize="20sp"/>

                            </LinearLayout>

                        </androidx.cardview.widget.CardView>
                        <androidx.cardview.widget.CardView
                            android:id="@+id/achivements_card"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_columnWeight="1"
                            android:layout_rowWeight="1"
                            app:cardElevation="10dp"
                            app:cardCornerRadius="12dp"
                            app:cardBackgroundColor="#ffff"
                            android:layout_margin="12dp">

                            <LinearLayout
                                android:padding="16dp"
                                android:gravity="center"
                                android:layout_width="match_parent"
                                android:layout_height="160dp"
                                android:orientation="vertical">
                                <ImageView
                                    android:src="@drawable/emoji_events_24px"
                                    android:layout_width="90dp"
                                    android:layout_height="90dp"/>
                                <TextView
                                    android:layout_marginTop="12dp"
                                    android:text="@string/achievements"
                                    android:textSize="20sp"
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:textColor="#000"/>

                            </LinearLayout>
                        </androidx.cardview.widget.CardView>







                    </GridLayout>

    
    </LinearLayout>
</ScrollView>