<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".scheduling_main"
    android:background="@drawable/dashboard_background">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fadeScrollbars="true"
        android:fadingEdgeLength="250dp"
        android:requiresFadingEdge="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <include
                android:id="@+id/toolbar_main"
                layout="@layout/toolbar" />

            <GridLayout

                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:alignmentMode="alignMargins"
                android:columnCount="1"
                android:columnOrderPreserved="false"
                android:rowCount="2">

                <androidx.cardview.widget.CardView
                    android:id="@+id/medication_schedule"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_rowWeight="1"
                    android:layout_columnWeight="1"
                    app:cardUseCompatPadding="true"
                    android:layout_margin="12dp"
                    app:cardBackgroundColor="#ffff"
                    app:cardCornerRadius="12dp"
                    app:cardElevation="10dp">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:orientation="vertical"
                        android:padding="16dp">

                        <ImageView
                            android:layout_width="90dp"
                            android:layout_height="90dp"
                            android:contentDescription="@string/medication_schedule_btn"
                            android:src="@drawable/calendar_today_24px" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="12dp"
                            android:text="@string/medication_schedule"
                            android:textColor="#000"
                            android:textSize="20sp" />

                        <LinearLayout
                            android:id="@+id/expandableLayout_btn"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="12dp"
                            android:orientation="vertical"
                            android:visibility="gone"
                            >
                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="Next: "
                                android:textColor="#000"
                                android:textSize="22sp"
                                />

                            <TextView
                                android:layout_width="match_parent"
                                android:layout_height="match_parent"
                                android:text="Tues 30th - Ibiprofane | 2 Pills | 2:30 PM"
                                android:textColor="#000"
                                android:textSize="18sp">

                            </TextView>
                            <Button
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:text="Details">
                            </Button>
                            <Button
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:text="View All"></Button>
                        </LinearLayout>

                    </LinearLayout>

                </androidx.cardview.widget.CardView>



                <androidx.cardview.widget.CardView
                    android:id="@+id/order_medication"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_rowWeight="1"
                    android:layout_columnWeight="1"
                    android:layout_margin="12dp"
                    app:cardUseCompatPadding="true"
                    app:cardBackgroundColor="#ffff"
                    app:cardCornerRadius="12dp"
                    app:cardElevation="10dp">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="160dp"
                        android:gravity="center"
                        android:orientation="vertical"
                        android:padding="16dp">

                        <ImageView
                            android:layout_width="90dp"
                            android:layout_height="90dp"
                            android:contentDescription="@string/scheduling_btn"
                            android:src="@drawable/medical_services_24px" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="12dp"
                            android:text="@string/order_medication"
                            android:textColor="#000"
                            android:textSize="20sp" />

                    </LinearLayout>

                </androidx.cardview.widget.CardView>

                <androidx.cardview.widget.CardView
                    android:id="@+id/view_prescription"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_rowWeight="1"
                    android:layout_columnWeight="1"
                    android:layout_margin="12dp"
                    app:cardUseCompatPadding="true"
                    app:cardBackgroundColor="#ffff"
                    app:cardCornerRadius="12dp"
                    app:cardElevation="10dp">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical"
                        android:background="#fff">

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:gravity="center"
                            android:orientation="vertical"
                            android:padding="16dp">

                            <ImageView
                                android:layout_width="90dp"
                                android:layout_height="90dp"
                                android:contentDescription="@string/view_prescription_btn"
                                android:src="@drawable/calendar_today_24px" />

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_marginTop="12dp"
                                android:text="@string/view_prescription"
                                android:textColor="#000"
                                android:textSize="20sp" />

                        </LinearLayout>

                        <LinearLayout
                            android:id="@+id/expandableLayout"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="12dp"
                            android:orientation="vertical"
                            android:visibility="gone">
                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="You have no medication on file"
                                android:textSize="22sp"
                                android:textColor="#000"/>
                        </LinearLayout>


                    </LinearLayout>
                </androidx.cardview.widget.CardView>



            </GridLayout>


        </LinearLayout>
    </ScrollView>

</LinearLayout>